Finish 2.6.2 release notes

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -240,7 +240,7 @@ beta
         <li><a href="/docs/2.5/release-notes.html">2.5</a></li>
         <li><a href="/docs/2.6/release-notes.html">2.6</a></li>
         <li><a href="/docs/2.6.1/release-notes.html">2.6.1</a></li>
-        <li><a href="/docs/2.6.2/release-notes.html">2.6.2</a> (tbd)</li>
+        <li><a href="/docs/2.6.2/release-notes.html">2.6.2</a></li>
     </ul>
 {% endblock %}
 
