--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -234,14 +234,22 @@ beta
 
     <h3 id="release-notes">{{ macros.status_icon('Release Notes') }}</h3>
     <ul class="list--bullet">
-        <li><a href="/docs/release-notes-2.4.0.html">2.4</a></li>
-        <li><a href="/docs/release-notes-2.4.1.html">2.4.1</a></li>
-        <li><a href="/docs/release-notes-2.4.2.html">2.4.2</a></li>
+        <li>
+            <a href="/docs/release-notes-2.4.0.html">2.4</a>
+            <ul class="list--bullet">
+                <li><a href="/docs/release-notes-2.4.1.html">2.4.1</a></li>
+                <li><a href="/docs/release-notes-2.4.2.html">2.4.2</a></li>
+            </ul>
+        </li>
         <li><a href="/docs/release-notes-2.5.0.html">2.5</a></li>
-        <li><a href="/docs/release-notes-2.6.0.html">2.6</a></li>
-        <li><a href="/docs/release-notes-2.6.1.html">2.6.1</a></li>
-        <li><a href="/docs/release-notes-2.6.2.html">2.6.2</a></li>
-        <li><a href="/docs/release-notes-2.6.3.html">2.6.3</a></li>
+        <li>
+            <a href="/docs/release-notes-2.6.0.html">2.6</a>
+            <ul class="list--bullet">
+                <li><a href="/docs/release-notes-2.6.1.html">2.6.1</a></li>
+                <li><a href="/docs/release-notes-2.6.2.html">2.6.2</a></li>
+                <li><a href="/docs/release-notes-2.6.3.html">2.6.3</a></li>
+            </ul>
+        </li>
     </ul>
 {% endblock %}
 
