Fix missing name on kraken env page

--- a/templates/kraken/environment/environment.twig
+++ b/templates/kraken/environment/environment.twig
@@ -9,6 +9,7 @@
 
     <h3>Name</h3>
     <p>
+        {{ environment.name }}
         {% if environment.isProduction %}
             {{ macros.status('Production', 'info', 'key') }}
         {% endif %}
