Fix words in warning message

--- a/templates/kraken/configuration/deploy.twig
+++ b/templates/kraken/configuration/deploy.twig
@@ -77,7 +77,7 @@
 
     {% if errors %}
 
-        {{ macros.alert('error', 'Cannot rollback configuration!', 'Consul or QKS may not be configured correctly. Contact an Administrator immediately.') }}
+        {{ macros.alert('error', 'Cannot deploy configuration!', 'Consul or QKS may not be configured correctly. Contact an Administrator immediately.') }}
 
         <p>Kraken found the following errors:</p>
         <ul class="list--bullet">
