Add 2.6.4 release notes

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -248,6 +248,7 @@ beta
                 <li><a href="/docs/release-notes-2.6.1.html">2.6.1</a></li>
                 <li><a href="/docs/release-notes-2.6.2.html">2.6.2</a></li>
                 <li><a href="/docs/release-notes-2.6.3.html">2.6.3</a></li>
+                <li><a href="/docs/release-notes-2.6.4.html">2.6.4</a></li>
             </ul>
         </li>
     </ul>
