Add qcp link from kraken faq

--- a/templates/kraken/help.twig
+++ b/templates/kraken/help.twig
@@ -165,7 +165,7 @@
     <p class="mbn">Before being read in plaintext, the following steps must be performed on each value:</p>
     <ul class="list--bullet">
         <li>Decode from <b>base64 string</b></li>
-        <li>Decrypt from <b>encrypted binary</b></li>
+        <li>Decrypt from <a href="http://git/BFriesen/QCP"></a><b>QKS Client Protocol</b></li>
         <li>Decode from <b>JSON string</b></li>
     </ul>
 
