Fix link to wrong audit page from kraken logs

--- a/templates/kraken/admin/audit.logs.twig
+++ b/templates/kraken/admin/audit.logs.twig
@@ -56,6 +56,6 @@
         <p>No logs found.</p>
     {% endif %}
 
-    {{ pagination.pagination(page, last, 'admin.audit.logs', {}) }}
+    {{ pagination.pagination(page, last, 'kraken.admin.audit.logs', {}) }}
 
 {% endblock %}
